FIX: Positioning is off-center

--- a/jcsdl/jcsdl.scss
+++ b/jcsdl/jcsdl.scss
@@ -70,7 +70,6 @@ $otherIconsSprite : 'img/icons-sprite-other.png?2';
 		display: block; width: 80px; height: 80px;
 		overflow: hidden;
 		text-indent: -9999px;
-		background-color: #f0f0f0 !important;
 
 		&.target {width: 110px; height: 110px; margin-right: 35px;}
 
